Fix background parallax overflow on 404 page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -174,7 +174,7 @@ h1 {
   top: -8rem !important;
   transform: translate(-50%, 0%) !important;
   width: 1920px;
-  height: 1080px;
+  height: 1150px;
 }
 .tile-bg img {
   top: unset !important;
